<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014-2016 The OmniROM Project
     Copyright (C) 2021 The Evolution X Project
     Copyright (C) 2018 The Xiaomi-SDM660 Project
     Copyright (C) 2018-2021 crDroid Android Project

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
        http://www.apache.org/licenses/LICENSE-2.0
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <!-- Device Extras -->
    <string name="device_title">Device Extras</string>
    <string name="device_summary">Adjust device specific settings</string>

    <!-- Display -->
    <string name="display_title">Display</string>
    <string name="dc_mode_title">DC-dimming</string>
    <string name="dc_mode_summary">Dim backlight by lowering DC current draw</string>
    <string name="hbm_mode_title">High brightness mode</string>
    <string name="hbm_mode_summary">Enable peak luminance</string>
    <string name="hbm_mode_warning">Long time usage of High brightness mode may damage your display</string>
    <string name="auto_hbm_title">Automatic high brightness mode</string>
    <string name="auto_hbm_summary">Enable peak luminance based on sunlight</string>
    <string name="auto_hbm_threshold_title"></string>
    <string name="auto_hbm_threshold_summary">threshold (lux)</string>
    <string name="panel_modes_title">Panel modes</string>
    <string name="panel_modes_summary">Modes for panel color correction</string>
    <string name="off_mode_title">Off</string>
    <string name="srgb_mode_title">sRGB mode</string>
    <string name="dci_mode_title">DCI-P3 wide colour gamut mode</string>
    <string name="wide_mode_title">Wide colour mode</string>

    <!-- Doze -->
    <string name="ambient_display_title">Ambient display</string>
    <string name="ambient_display_enable_title">Ambient display</string>
    <string name="ambient_display_enable_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_gestures_title">Ambient display gestures</string>
    <string name="ambient_display_gestures_summary">Additional gestures to wake the screen</string>
    <string name="ambient_display_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_always_on_title">Always on</string>
    <string name="dialog_ok">OK</string>
    <string name="disabled">Disabled</string>
    <string name="doze_panel_title">Doze</string>
    <string name="doze_settings_help_text">These features use sensor events to launch a doze notification pulse. The chosen sensor is only enabled when the device receives a notification, this helps to reduce battery usage. There is also an option to enable the chosen sensor as soon as the screen turns off, this will cause higher battery usage.</string>
    <string name="doze_settings_help_title">Help</string>
    <string name="pickup_sensor_title">Pickup sensor</string>
    <string name="pick_up_gesture_title">Pick-up</string>
    <string name="pick_up_gesture_summary">Pulse notifications on pick-up</string>
    <string name="pick_up_wake_gesture_summary">Wake device on pick-up</string>
    <string name="pocket_gesture_title">Pocket</string>
    <string name="pocket_gesture_summary">Pulse notifications on removal from pocket</string>
    <string name="proximity_sensor_title">Proximity sensor</string>
    <string name="ambient_display_always_on_summary">Show time, notification icons, and other info. Increased battery usage.</string>
    <string name="switch_bar_off">Off</string>
    <string name="switch_bar_on">On</string>

</resources>
